后台域名和urlæä¼化

--- a/app/admin/view/common/aside.html
+++ b/app/admin/view/common/aside.html
@@ -15,7 +15,7 @@
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('语言列表','{:url(\'system/language\')}')">
+                                <a onclick="xadmin.add_tab('语言列表','{:url(\'system/language/index\')}')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>语言列表</cite></a>
                             </li>
@@ -70,7 +70,7 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a onclick="xadmin.add_tab('产品分类','{:url(\'category/product\')}')">
+                        <a onclick="xadmin.add_tab('产品分类','{:url(\'category/product/index\')}')">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>产品分类</cite></a>
                     </li>
@@ -84,7 +84,7 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a onclick="xadmin.add_tab('图片资源','{:url(\'media/image_list\',[\'path\'=>\'images\/\'])}')">
+                        <a onclick="xadmin.add_tab('图片资源','{:url(\'media/image/list\',[\'path\'=>\'images\/\'])}')">
                             <i class="iconfont">&#xe6a7;</i><cite>图片管理</cite>
                         </a>
                     </li>
@@ -109,29 +109,29 @@
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('幻灯片(活动/新品)','{:url(\'content/prettiest_index\',[\'type\'=>1])}')">
+                                <a onclick="xadmin.add_tab('幻灯片(活动/新品)','{:url(\'content/prettiest/index\',[\'type\'=>1])}')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>幻灯片(活动/新品)</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('热门(实力担当)','{:url(\'content/prettiest_index\',[\'type\'=>2])}')">
+                                <a onclick="xadmin.add_tab('热门(实力担当)','{:url(\'content/prettiest/index\',[\'type\'=>2])}')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>热门(实力担当)</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('重金打造(镇馆之宝)','{:url(\'content/prettiest_index\',[\'type\'=>3])}')">
+                                <a onclick="xadmin.add_tab('重金打造(镇馆之宝)','{:url(\'content/prettiest/index\',[\'type\'=>3])}')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>重金(镇馆之宝)</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('霸屏横幅(实力推荐)','{:url(\'content/prettiest_index\',[\'type\'=>4])}')">
+                                <a onclick="xadmin.add_tab('霸屏横幅(实力推荐)','{:url(\'content/prettiest/index\',[\'type\'=>4])}')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>霸屏横幅(实力推荐)</cite></a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a onclick="xadmin.add_tab('产品管理','{:url(\'content/product_index\')}')">
+                        <a onclick="xadmin.add_tab('产品管理','{:url(\'content/product/index\')}')">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>产品管理</cite></a>
                     </li>
