--- a/app/admin/view/category/product_category/add.html
+++ b/app/admin/view/category/product_category/add.html
@@ -88,7 +88,7 @@
             form.on('submit(add)',
                 function (data) {
                     $.ajax({
-                        url: "{:url('category/add_product')}",
+                        url: "{:url('category/product/add')}",
                         type: 'POST',
                         data: data.field,
                         'success': function (result) {
