后台独立域名优化+完善路由优化

--- a/app/admin/view/common/header.html
+++ b/app/admin/view/common/header.html
@@ -1,10 +1,11 @@
 <div class="container">
-    <div class="logo">
-        <a href="./index.html">Minthouz</a></div>
-    <div class="left_open">
-        <a><i title="展开左侧栏" class="iconfont">&#xe699;</i></a>
-    </div>
-    <!--<ul class="layui-nav left fast-add" lay-filter="">
+  <div class="logo">
+    <a href="./index.html">Minthouz</a>
+  </div>
+  <div class="left_open">
+    <a><i title="展开左侧栏" class="iconfont">&#xe699;</i></a>
+  </div>
+  <!--<ul class="layui-nav left fast-add" lay-filter="">
         <li class="layui-nav-item">
             <a href="javascript:;">+新增</a>
             <dl class="layui-nav-child">
@@ -27,12 +28,15 @@
             </dl>
         </li>
     </ul>-->
-    <ul class="layui-nav right" lay-filter="">
-
-        <li class="layui-nav-item to-index"><a href="/">前台首页</a></li>
-        <li class="layui-nav-item">
-            <a href="{:url('user/logout')}">退出登录</a>
-        </li>
-
-    </ul>
+  <ul class="layui-nav right" lay-filter="">
+    <li class="layui-nav-item to-index">
+      <a href="/">{$adminUser.title}:{$adminUser.username}</a>
+    </li>
+    <li class="layui-nav-item to-index">
+      <a href="//dev.minthouz.com" target="_index">前台首页</a>
+    </li>
+    <li class="layui-nav-item">
+      <a href="{:url('user/logout')}">退出登录</a>
+    </li>
+  </ul>
 </div>
