--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -496,10 +496,11 @@ body {
         }
     }
     .copyright {
+        padding: 5px 0;
+        font-size: 12px;
         text-align: center;
         background: @blackColor;
         color: @whiteSmoke;
-        padding: 5px 0;
     }
     @media screen and (min-width: 768px) and (max-width: 991px) {
         .about {
