--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -662,10 +662,11 @@ body {
   color: #14bc41;
 }
 .g-foot .copyright {
+  padding: 5px 0;
+  font-size: 12px;
   text-align: center;
   background: #000;
   color: #888;
-  padding: 5px 0;
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .g-foot .about {
