--- a/app/admin/view/system/language/add_language.html
+++ b/app/admin/view/system/language/add_language.html
@@ -8,8 +8,8 @@
                     <span class="x-red">*</span>语言
                 </label>
                 <div class="layui-input-inline">
-                    <input type="text" id="name" name="name" required="" lay-verify="required"
-                           autocomplete="off" class="layui-input">
+                    <input type="text" id="name" name="name" required="" lay-verify="required" autocomplete="off"
+                        class="layui-input">
                 </div>
                 <div class="layui-form-mid layui-word-aux">
 
@@ -20,8 +20,8 @@
                     <span class="x-red">*</span>标识
                 </label>
                 <div class="layui-input-inline">
-                    <input type="text" id="code" name="code" required="" lay-verify="required"
-                           autocomplete="off" class="layui-input">
+                    <input type="text" id="code" name="code" required="" lay-verify="required" autocomplete="off"
+                        class="layui-input">
                 </div>
                 <div class="layui-form-mid layui-word-aux">
 
@@ -61,28 +61,28 @@
             form.on('submit(add)',
                 function (data) {
                     $.ajax({
-                        url: "{:url('system/add_language')}",
+                        url: "{:url('system/language/add')}",
                         type: 'POST',
                         data: data.field,
                         'success': function (result) {
                             if (result.status === 1) {
-                                layer.msg(result.message, {'icon': 1, 'time': 1000}, function () {
+                                layer.msg(result.message, { 'icon': 1, 'time': 1000 }, function () {
                                     xadmin.close();
                                     xadmin.father_reload();
                                 });
-                            }else{
-                                layer.msg(result.message,{'icon':5,'time':8000});
+                            } else {
+                                layer.msg(result.message, { 'icon': 5, 'time': 8000 });
                             }
                         }
                     }, 'JSON');
-                // console.log(data);
-                //     //发异步，把数据提交给php
-                //     layer.alert("增加成功", {icon: 6}, function () {
-                //         //关闭当前frame
-                //         xadmin.close();
-                //         // 可以对父窗口进行刷新
-                //         xadmin.father_reload();
-                //     });
+                    // console.log(data);
+                    //     //发异步，把数据提交给php
+                    //     layer.alert("增加成功", {icon: 6}, function () {
+                    //         //关闭当前frame
+                    //         xadmin.close();
+                    //         // 可以对父窗口进行刷新
+                    //         xadmin.father_reload();
+                    //     });
                     return false;
                 });
 
