--- a/app/frontend/view/desktop/home/index.html
+++ b/app/frontend/view/desktop/home/index.html
@@ -30,8 +30,8 @@
         <div class="common-width">
             <div class="about">
                 <span><a href="#">MINTHOUZ</a></span>
-                <span><a href="#">ABOUT US</a></span>
-                <span><a href="#" target="_blank">FIND US ON FACEBOOK</a></span>
+                <span><a href="#">About Us</a></span>
+                <span><a href="#" target="_blank">Find Us on Facebook</a></span>
             </div>
 
             <div class="store">
