公共样式优化调整

--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -488,7 +488,7 @@ body {
   margin-top: 100px;
 }
 .g-foot .about {
-  padding: 40px;
+  padding: 40px 0;
   background: #f5f5f5;
 }
 .g-foot .aboutbefore,
