--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -351,7 +351,7 @@ body {
     margin-top: 100px;
     .about {
         .clearFix();
-        padding: 40px;
+        padding: 40px 0;
         background: @bodyBgColor;
     }
     .about .contact {
